# yfips-indoor-positioning-system

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: calibration.py  config.py  detection.py  gui.py  image_detector.py  ros_publisher.py
src/yfips/: __init__.py  calibration.py  config.py  detection.py  gui.py  image_detector.py  kalman_tracker.py  ros_publisher.py  tracker.py
tests/: test_apriltag_adapter.py  test_apriltag_options.py  test_calibration.py  test_camera_open.py  test_camera_settings.py  test_fps_meter.py  test_frame_grabber.py  test_image_detector.py  test_publisher.py  test_smoke.py  test_trackers.py
