[project]
name = "yfips"
version = "0.1.0"
description = "YF-IPS: low-cost indoor positioning system (vision + AprilTag)"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
    "numpy",
    "matplotlib",
    "apriltag",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yfips"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]

